# HRM

./: .gitignore  .gitmodules  CFG_REFACTOR_SPEC.md  CFG_TOKEN_VALIDATION_STEP2.md  CLAUDE.md  COMPRESSION_PLAN.md  DECODE.md  ENCODING.md  MODEL.md  TASK_OLD.md  TRAINING_AST_AUTOENCODER.md  adam_atan2.py  debug_dataset.py  debug_eval.py  debug_eval_detailed.py  debug_generation.py  debug_parser.py  debug_q_detailed.py  debug_q_gradients.py  debug_q_learning.py  demo_autoencoder.py  demo_enhanced_augmentations.py  demo_generation_head.py  pretrain_program_synthesis.py  program_synthesis_dataset.py  pyproject.toml  standalone_program_synthesis.py  test_full_model.py  test_integrated_hrm.py  test_mlx_hrm.py  test_new_system.py  test_program_synthesis.py  test_program_synthesis_simple.py  test_valid_generation.py  train_ast_autoencoder.py  train_autoencoder.py
.cursor/rules/: hrm.mdc
config/: cfg_program_synthesis.yaml
config/arch/: program_synthesis_hrm.yaml
dataset/: __init__.py  ast.py  ast_converter.py  ast_types.py  build_program_dataset.py  build_program_synthesis_dataset.py  cfg.py  cfg_parser.py  cfg_token_validator.py  code_generator.py  create_yaml_files.py  encoding.py  grammar.py  grammar_actions.py  graph_dataset.py  programs.py  test_program_synthesis_dataset.py  tokenizer.py
dataset/program_definitions/: cube.yaml  (+22 more)
models/: ast_autoencoder.py  autoencoder.py  features.py  generation.py  generation_head.py  graph_encoder.py  layers.py  layers_fallback.py  losses.py  program_synthesis_hrm.py  program_synthesis_processor.py
noteboks/: input.ipynb  nltk_demo.ipynb  test.ipynb
specs/: GENERATION_HEAD.md  GENERATION_HEAD_PLAN.md  GENERATION_HEAD_PLAN2.md
tests/: conftest.py  test_ast_components.py  test_ast_graph.py  test_ast_reconstruction.py  test_autoencoder_e2e.py  test_autoencoder_smoke.py  test_build_program_dataset.py  test_cfg_parser.py  test_cfg_token_validator.py  test_encoding.py  test_encoding_batch.py  test_encoding_pyg.py  test_generation.py  test_generation_head.py  test_gnn_smoke.py  test_grammar.py  test_grammar_actions.py  test_grammar_actions_end_to_end.py  test_node_feature_builder.py  test_programs.py  test_tokenizer.py  test_tokenizer_cfg_integration.py
utils/: debug_generation.py  functions.py  generate.py  simple_generation_with_cfg.py  tiny_py_generator.py
(+1 files in other folders)
