[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrm"
version = "0.1.0"
description = "HRM - Human Reasoning Model"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "adam-atan2",
    "einops",
    "tqdm",
    "coolname",
    "pydantic",
    "argdantic",
    "wandb",
    "omegaconf",
    "hydra-core",
    "huggingface_hub",
    "numpy>=1.24.4",
    "ast2json>=0.4",
    "pyyaml>=6.0.2",
    "ipykernel>=6.29.5",
    "torch-geometric>=2.6.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "nltk>=3.9.1",
    "anytree>=2.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "utils*", "dataset*", "config*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"